--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,8 @@ classifiers = [
 dependencies = [
     "requests>=2.28.0",
     "pandas>=1.5.0",
+    "kaggle>=1.5.0",
+    "python-dotenv>=1.0.0",
 ]
 
 [project.optional-dependencies]
