--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ dependencies = [
     "pandas>=1.5.0",
     "kaggle>=1.5.0",
     "python-dotenv>=1.0.0",
+    "PyPDF2>=3.0.0",
 ]
 
 [project.optional-dependencies]
