--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ dependencies = [
     "kaggle>=1.5.0",
     "python-dotenv>=1.0.0",
     "PyPDF2>=3.0.0",
+    "openpyxl>=3.0.0",
 ]
 
 [project.optional-dependencies]
