--- a/api_config_template.env
+++ b/api_config_template.env
@@ -5,6 +5,19 @@
 # Most APIs have free tiers - see documentation for details
 
 # ============================================================================
+# AI/ML PLATFORM APIS
+# ============================================================================
+
+# OpenAI - For LLM capabilities (GPT-4, embeddings)
+# Get your key at: https://platform.openai.com/api-keys
+OPENAI_API_KEY=your-openai-api-key-here
+
+# LangChain - For tracing and monitoring (optional)
+# Get your key at: https://smith.langchain.com/
+LANGCHAIN_TRACING_V2=true
+LANGCHAIN_API_KEY=your-langchain-api-key-here
+
+# ============================================================================
 # FINANCIAL DATA APIS
 # ============================================================================
 
