--- a/api_config_template.env
+++ b/api_config_template.env
@@ -3,6 +3,10 @@
 # ============================================================================
 # Copy this file to .env and fill in your API keys
 # Most APIs have free tiers - see documentation for details
+#
+# REQUIREMENTS:
+# - Python 3.11 or higher (required for latest NumPy/LangChain dependencies)
+# - Virtual environment recommended: python -m venv .venv
 
 # ============================================================================
 # AI/ML PLATFORM APIS
