--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,11 +39,16 @@ dependencies = [
     "langchain-openai==0.3.28",
     "langchain-core==0.3.72", 
     "langgraph==0.6.1",
+    "langchain-qdrant>=0.2.0",
     "pydantic==2.11.7",
     "qdrant-client==1.15.0",
     "ragas==0.3.0",
     "datasets==2.21.0",
     "typing-extensions==4.14.1",
+    "PyMuPDF==1.24.1",
+    # FastAPI dependencies
+    "fastapi==0.115.6",
+    "uvicorn[standard]==0.34.0",
 ]
 
 [project.optional-dependencies]
