--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,13 +38,16 @@ dependencies = [
     # AI/ML and LangChain dependencies for enhanced notebook
     "langchain-openai==0.3.28",
     "langchain-core==0.3.72", 
+    "langchain-community>=0.3.0",
     "langgraph==0.6.1",
     "langchain-qdrant>=0.2.0",
     "pydantic==2.11.7",
     "qdrant-client==1.15.0",
     "redis==5.2.0",
+    # RAGAS evaluation framework and dependencies
     "ragas==0.3.0",
     "datasets==2.21.0",
+    "langsmith>=0.4.0",
     "typing-extensions==4.14.1",
     "PyMuPDF==1.24.1",
     # FastAPI dependencies
@@ -71,8 +74,15 @@ notebook = [
     "seaborn>=0.12.0",
     "plotly>=5.0.0",
 ]
+evaluation = [
+    # Additional evaluation and testing dependencies
+    "pytest-asyncio>=0.21.0",
+    "asyncio-throttle>=1.0.0",
+    "tenacity>=8.0.0",
+    "tqdm>=4.64.0",
+]
 full = [
-    "investigator-ai[dev,notebook]",
+    "investigator-ai[dev,notebook,evaluation]",
 ]
 
 [project.urls]
