feat: add configuration controls for BM25 retrieval optimization
- Add DEFAULT_RETRIEVAL_METHOD config (auto/bm25/dense)
- Add ENABLE_PERFORMANCE_LOGGING toggle for search timing
- Add BM25_ENABLED flag for easy disabling of sparse search
- Update vector store to respect configuration settings
- Add comprehensive environment template documentation
- Enable production-ready feature toggles for deployment

--- a/config.env.template
+++ b/config.env.template
@@ -34,6 +34,14 @@ PDF_DATA_PATH=data/pdf_downloads
 MAX_CONCURRENT_REQUESTS=10
 REQUEST_TIMEOUT=30
 
+# ===== Retrieval Optimization Settings =====
+# DEFAULT_RETRIEVAL_METHOD: auto (BM25 primary with dense fallback), bm25 (BM25 only), dense (vector only)
+DEFAULT_RETRIEVAL_METHOD=auto
+# Enable/disable performance logging for search operations
+ENABLE_PERFORMANCE_LOGGING=true
+# Enable/disable BM25 sparse retrieval (disabling falls back to dense only)
+BM25_ENABLED=true
+
 # ===== Development Settings =====
 DEBUG=false
 LOG_LEVEL=INFO
