--- a/config.env.template
+++ b/config.env.template
@@ -4,6 +4,7 @@
 OPENAI_API_KEY=your_openai_api_key_here
 TAVILY_SEARCH_API_KEY=your_tavily_api_key_here
 EXCHANGE_RATE_API_KEY=your_exchange_rate_api_key_here
+LANGSMITH_API_KEY=your_langsmith_api_key_here
 
 # ===== LLM Configuration =====
 EMBEDDING_MODEL=text-embedding-3-large
@@ -41,6 +42,11 @@ DEFAULT_RETRIEVAL_METHOD=auto
 ENABLE_PERFORMANCE_LOGGING=true
 # Enable/disable BM25 sparse retrieval (disabling falls back to dense only)
 BM25_ENABLED=true
+
+# ===== LangSmith Monitoring =====
+LANGSMITH_PROJECT=InvestigatorAI-Production
+LANGSMITH_TRACING=true
+LANGSMITH_ENDPOINT=https://api.smith.langchain.com
 
 # ===== Development Settings =====
 DEBUG=false
