--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,6 +54,9 @@ dependencies = [
     "plotly>=5.0.0",
     "pip",
     "rapidfuzz==3.1.0",
+    "rank_bm25==0.2.2",
+    "langchain-experimental==0.3.1",
+    "langchain-cohere==0.3.1"
 ]
 
 [project.optional-dependencies]
