--- a/config.env.template
+++ b/config.env.template
@@ -3,7 +3,7 @@
 # ===== API Keys =====
 OPENAI_API_KEY=your_openai_api_key_here
 TAVILY_SEARCH_API_KEY=your_tavily_api_key_here
-EXCHANGE_RATE_API_KEY=your_exchange_rate_api_key_here
+# EXCHANGE_RATE_API_KEY - No longer needed (now uses local JSON data file)
 LANGSMITH_API_KEY=your_langsmith_api_key_here
 
 # ===== LLM Configuration =====
