🚀 PRODUCTION READY: Comprehensive Documentation & LangSmith Monitoring
📚 DOCUMENTATION OVERHAUL:
✅ Created comprehensive API/README.md with detailed Agent Architecture
✅ Added navigation to ALL markdown files (12 files updated)
✅ Complete cross-referencing across all documentation sections
✅ Professional-grade technical documentation for production deployment

🔍 LANGSMITH TRACING IMPLEMENTATION HIGHLIGHTED:
✅ Added dedicated LangSmith monitoring section to CERTIFICATION_CHALLENGE.md
✅ Comprehensive agent execution tracing documentation
✅ Production monitoring dashboard capabilities detailed
✅ Regulatory compliance audit trail benefits explained
✅ Complete integration file references and testing framework
✅ LangSmith emphasized in innovation section and implementation table

🤖 AGENT SYSTEM OPTIMIZATION:
✅ REMOVED all artificial word limits from agent prompts (300-600 word limits → unlimited)
✅ ENHANCED agent tool limits: Tavily 2→7 results, ArXiv 2→5 results, Regulatory insights 6→12
✅ EXPANDED report generation: Key findings 4→8, Risk factors 3→6, Compliance items 3→6
✅ COMPREHENSIVE agent responses with NO truncation
✅ Updated agent prompts for maximum detail and professional analysis

🏗️ ARCHITECTURE IMPROVEMENTS:
✅ Separated document initialization from API startup (minutes → seconds startup)
✅ Added init-docs service for fast vector database loading
✅ Enhanced VectorStoreManager with connect_existing() method
✅ Optimized Docker service dependencies and startup sequence
✅ Improved error handling and service health monitoring

🔧 API ENHANCEMENTS:
✅ Enhanced external API limits (Tavily: 3→7, ArXiv: 2→5)
✅ Comprehensive investigation analysis with expanded content limits
✅ Professional report generation suitable for regulatory review
✅ Removed debug logging for production readiness

🐛 BUG FIXES:
✅ Fixed agent output truncation issues (136 chars → unlimited)
✅ Resolved embedding model mismatches (ada-002 → text-embedding-3-large)
✅ Fixed Docker environment variable p

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,42 @@ services:
     networks:
       - investigator_network
 
+  # Document Vector Database Initialization Service
+  init-docs:
+    build:
+      context: .
+      dockerfile: scripts/Dockerfile.init
+    container_name: investigator_init_docs
+    environment:
+      # Database connections
+      - QDRANT_HOST=qdrant
+      - QDRANT_PORT=6333
+      
+      # API Keys
+      - OPENAI_API_KEY=${OPENAI_API_KEY}
+      - TAVILY_SEARCH_API_KEY=${TAVILY_SEARCH_API_KEY}
+      - LANGSMITH_API_KEY=${LANGSMITH_API_KEY}
+      
+      # Model Configuration
+      - EMBEDDING_MODEL=${EMBEDDING_MODEL:-text-embedding-3-large}
+      - LLM_MODEL=${LLM_MODEL:-gpt-4o}
+      - LLM_TEMPERATURE=${LLM_TEMPERATURE:-0}
+      - LLM_MAX_TOKENS=${LLM_MAX_TOKENS:-15000}
+      
+      # Document processing settings
+      - PDF_DATA_PATH=data/pdf_downloads
+      - VECTOR_COLLECTION_NAME=regulatory_documents
+      - CHUNK_SIZE=1000
+      - CHUNK_OVERLAP=200
+    volumes:
+      - ./data:/app/data:ro
+    depends_on:
+      qdrant:
+        condition: service_healthy
+    networks:
+      - investigator_network
+    restart: "no"  # Run once and exit
+
   # InvestigatorAI API Backend
   api:
     build:
@@ -59,6 +95,12 @@ services:
       - LANGSMITH_API_KEY=${LANGSMITH_API_KEY}
       # Note: Exchange rates now use local JSON data file instead of API
       
+      # Model Configuration
+      - EMBEDDING_MODEL=${EMBEDDING_MODEL:-text-embedding-3-large}
+      - LLM_MODEL=${LLM_MODEL:-gpt-4o}
+      - LLM_TEMPERATURE=${LLM_TEMPERATURE:-0}
+      - LLM_MAX_TOKENS=${LLM_MAX_TOKENS:-15000}
+      
       # LangSmith Configuration
       - LANGSMITH_TRACING=${LANGSMITH_TRACING:-true}
       - LANGSMITH_PROJECT=${LANGSMITH_PROJECT:-InvestigatorAI-Docker}
@@ -80,6 +122,8 @@ services:
         condition: service_healthy
       qdrant:
         condition: service_healthy
+      init-docs:
+        condition: service_completed_successfully
     networks:
       - investigator_network
     healthcheck:
